<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="databaseName">SpiikSangBok</string>
    <string name="app_name">Med Mössan På Sné</string>
    <string name="title_section1">Med Mössan På Sné</string>
    <string name="title_section2">Blekinge studentkårs Psångbok</string>
	<string name="title_section3">Om appen</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_about_fragment">AboutFragment</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_songs">SongsActivity</string>
    <string name="about">Med Mössan På Sné (SPIIKs Psångbok) - v. 0.0.1\n\n
		Copyright 2015 Oskar Emilsson. All rights reserved.\n
		Copyright 2014 Patrik Greco. All rights reserved.\n</string>
    <string name="license1">Redistribution and use in source and binary forms, with or without modification, are
	permitted provided that the following conditions are met:</string>
    <string name="license2">Redistributions of source code must retain the above copyright notice, this list of
	conditions and the following disclaimer.</string>
    <string name="license3">Redistributions in binary form must reproduce the above copyright notice, this list
	of conditions and the following disclaimer in the documentation and/or other materials
	provided with the distribution.\n</string>
    <string name="license4">THIS SOFTWARE IS PROVIDED BY Patrik Greco ``AS IS\'\' AND ANY EXPRESS OR IMPLIED
				WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND
				FITNESS FOR A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL Patrik Greco OR
				CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR
				CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR
				SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON
				ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING
				NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF
				ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.\n</string>
    <string name="license5">The views and conclusions contained in the software and documentation are those of the
				authors and should not be interpreted as representing official policies, either expressed
				or implied, of Patrik Greco.</string>
	<string name="thanks">Thanks to kd35a for the great app \"Blekingska Nationens Sångbok\". Large chunks of this app is ported from that one.\n</string>
	<string name="love">\nSPIIK &lt;3 Blekinge studentkår\n</string>
    <string name="title_activity_view_song">ViewSongActivity</string>
	<string name="search">Search</string>
    <string name="title_activity_songs__bsk_">Songs_Bsk_Activity</string>
	<string name="drawer_open">Open</string>
	<string name="drawer_close">Close</string>
    <string name="title_activity_splash">Splash</string>
	<string name="button_db">Uppdatera databas</string>

</resources>
