<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
				xmlns:tools="http://schemas.android.com/tools"
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:paddingLeft="@dimen/activity_horizontal_margin"
				android:paddingRight="@dimen/activity_horizontal_margin"
				android:paddingTop="@dimen/activity_vertical_margin"
				android:paddingBottom="@dimen/activity_vertical_margin"
				android:background="@color/white"
				tools:context="se.spiik.android.psangbok.AboutActivity$PlaceholderFragment">
	<ImageView
		android:paddingTop="38dp"
		android:layout_width="400dp"
		android:layout_height="400dp"
		android:src="@drawable/spiik_logo"
		android:scaleType="centerCrop"
		android:layout_below="@+id/textViewSearch"
		></ImageView>

	<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent">

		<ScrollView
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_weight="1">

			<TableLayout
					android:layout_width="fill_parent"
					android:layout_height="wrap_content">
				<Button
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:text="@string/button_db"
					android:id="@+id/button_db"
					android:onClick="rebuildDatabase"
					android:layout_column="1" />
				<TableRow>

					<TextView
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:text="@string/thanks"
							android:gravity="center_horizontal"
							android:layout_span="2"
							android:singleLine="false"
							android:layout_weight="1"
							/>
				</TableRow>

				<TableRow>

					<TextView
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:text="@string/love"
							android:gravity="center_horizontal"
							android:layout_span="2"
							android:singleLine="false"
							android:layout_weight="1"
							android:textStyle="bold"/>
				</TableRow>

				<TableRow>

					<TextView
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:text="@string/about"
							android:gravity="center_horizontal"
							android:layout_span="2"
							android:singleLine="false"
							android:layout_weight="1"
							/>
				</TableRow>

				<TableRow>

					<TextView
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:text="@string/license1"
							android:layout_span="2"
							android:singleLine="false"
							android:layout_weight="1"
							/>
				</TableRow>

				<TableRow>

					<TextView
							android:layout_width="fill_parent"
							android:layout_height="wrap_content"
							android:text="1. "
							android:singleLine="false"
							/>

					<TextView
							android:layout_width="fill_parent"
							android:layout_height="wrap_content"
							android:text="@string/license2"
							android:singleLine="false"
							android:layout_weight="1"
							android:gravity="left"
							/>
				</TableRow>

				<TableRow>

					<TextView
							android:layout_width="fill_parent"
							android:layout_height="wrap_content"
							android:text="2. "
							android:singleLine="false"
							/>

					<TextView
							android:layout_width="fill_parent"
							android:layout_height="wrap_content"
							android:text="@string/license3"
							android:singleLine="false"
							android:layout_weight="1"
							android:gravity="left"
							/>
				</TableRow>

				<TableRow>

					<TextView
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:text="@string/license4"
							android:layout_span="2"
							android:singleLine="false"
							android:layout_weight="1"
							/>
				</TableRow>

				<TableRow>

					<TextView
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:text="@string/license5"
							android:layout_span="2"
							android:singleLine="false"
							android:layout_weight="1"
							/>
				</TableRow>
			</TableLayout>
		</ScrollView>
		<!-- <TextView
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/about"
			android:gravity="center_horizontal"
			/>
		<TextView
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/license"
			/>-->
	</LinearLayout>
</RelativeLayout>
